src/index.css
:root{
  --clr-gray-1: hsl(210, 22%, 49%);
  --clr-grey-7: hsl(211, 27%, 70%);
  --clr-grey-9: hsl(212, 33%, 89%);
  --clr-grey-10: hsl(210, 36%, 96%);

  --clr-grey-1: #918E9B;

  --clr-green-3: #004d00;
  --clr-green-7: #cce6cc;
  
  --clr-green-10: #e6f2e6;
  --clr-green-11: #fafdfa;

  --clr-gold: #c59d5f;
  --clr-light-gold: #ffca7a;

  --clr-red-1: #F55A5A;

  --arrow-btn-clr: #E5E7EB;
  --hover-clr: hsl(211, 39%, 23%);

  --icon-blue: #0a66c2;
  --icon-grey1: #646170;
  --icon-grey-2: #a6a3b0;
  --icon-red-1: #F55A5A;
  --icon-red-2: #DA2D7A;


  --transition: all 0.3s linear;
}
body {
  margin: 0;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-family: 'Exo',-apple-system, sans-serif;

  background-color: var(--clr-green-11);
}
*{
  box-sizing: border-box;
}
html {
  scroll-behavior: smooth;
}
.App{
  display: flex;
  flex-direction: column;
}
.App.show{
  overflow: hidden;
  height: 100vh;
}
h3{
  font-size: 2rem;
}

.header-container{
  background-image: url('./images/banner1.jpeg');
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;

  height: 550px;
  z-index: 0;
}
.header-container > h3{
  text-align: center;
  max-width: 1250px;
  margin: 120px auto;
  text-transform: uppercase;
  font-weight: 600;
}
.header{
  padding: 2rem 0.5rem 0;
  display: flex;
  align-items: center;
  justify-content: space-between;
}
.header-links{
  display: none;
}
.intro-section-container{
  position: relative;
}
.intro-side-img{
  display: none;
  position: absolute;
  opacity: 0.64;
  height: 800px;
  top: 200px;
}
.intro-section{
  width: 85vw;
  max-width: 1550px;
  margin: 5rem auto 5rem;
  position: relative;
}
.intro-section > h4{
  font-weight: 300;
  font-size: 1.1rem;
  color: white;
  background-color: black;
  padding: 6rem 4rem;
  text-align: center;
}
.intro-img{
  display: none;
  border: 0.1rem solid black;
}
.main{
  margin-bottom: 9rem;
}
.main > h3, .search-box-header{
  max-width: 70vw;
  margin: 0 auto;
  font-weight: 300;
  margin-bottom: 4rem;
  text-align: center;
  font-size: 1.4rem;
  margin-bottom: 1rem;
}
.featured-box-background{
  background-image: url(./images/bck-img-1.png);
  background-attachment: fixed;
}
.featured-box{
  display: flex;
  flex-direction: column;
  gap: 5rem;
  padding: 2rem 3rem;
  margin-bottom: 4rem;
  max-width: 1550px;
  margin: 0 auto 4rem;
  overflow: hidden; 
  /* background-color: rgb(204, 230, 204,0.7); */
  background-color: rgb(255, 202, 122,0.7);
}
.featured-data:hover{
  scale: 1.02;
}
.featured-icon-left, .featured-icon-right{
  position: absolute;
  color: var(--clr-grey-1);
  font-size: 2.5rem;
  margin: 0;
  padding: 0;
  display: none;
}
.featured-icon-right{
  left: -8%;
}
.featured-icon-left{
  right: -8%;
}
.featured-data > a{
  /* margin-right: 1rem; */
  width: 50%;
  flex-shrink: 0;
}
.featured-data a > img{
  width: 100%;
  /* height: 100%; */
  /* height: 450px; */
  /* object-fit: cover; */
  padding: 5px;
}
.left{
  align-self: flex-end;
}
.strip-left, .strip-right{
  height: 48px;
  width: 90%;
  display: none;
  background-color: var(--clr-grey-1);
  position: absolute;
  z-index: -1;
}
.strip-right{
  right: -20%;
}
.strip-left{
  left: -90%;
}
.featured-card{
  height: 250px;
  display: flex;
  align-items: center;
  position: relative;
  z-index: 1;
}
.featured-data{
  max-width: 800px;
  height: 100%;
  display: flex;
  align-items: center;
  background-color: var(--clr-grey-10);
  border: 0.15rem solid var(--clr-gold);
  z-index: 1;
  position: relative;
  transition: var(--transition);
}
.featured-info > h2{
  font-size: 0.7rem;
  font-weight: 500;
  color: var(--clr-gold);
}
.featured-info-desc > p{
  font-size: 0.4rem;
}
.featured-info > p{
  font-size: 0.4rem;
}
.short-desc{
  display: none;
}
.right.hidden{
  transform: translateX(50%);
  opacity: 0;
}
.left.hidden{
  transform: translateX(-50%);
  opacity: 0;
}
.hidden{
  filter: blur(5px);
  transition: all 1s;
}
.left.visible, .right.visible{
  opacity: 1;
  filter: blur(0);
  transform: translateX(0);
}

.search-box{
  display: flex;
  width: 70vw;
  max-width: 800px;
  margin: 0 auto;
  align-items: center;
  border-radius: 0.6rem;
  border: solid 0.1rem var(--clr-grey-9);
  background-color: white;
}
.search-box:hover{
  border: solid 0.1rem var(--clr-grey-9);
}
.search-box > input{
  flex: 1;
  border: none;
  border-radius: 0.6rem;
  font-size: large;
  outline-width: 0;
  text-indent: 0.6rem;
  max-width: 95%;
  background-color: transparent;
}
.search-icon{
  min-width: 1.4rem;
  height: 2rem;
  color: var(--clr-grey-7);
  margin-left: 0.4rem;
}

.recipes{
  width: 90vw;
  margin: 0 auto;
  max-width: 1170px;
  display: grid;
  gap: 3rem 2rem;
  justify-items: center;
  grid-template-columns: 1fr;
}
.recipe-container{
  padding: 1rem;
  border-radius: 0.3rem;
  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
  
  height: 27rem;
  width: 15rem;

  display: flex;
  flex-direction: column;
  background-color: var(--clr-grey-10);
  transition: all 0.3s linear;
}
.recipe-container:hover{
  scale: 1.05;
}

.recipe-img{
  object-fit: cover;
  height: 11rem;
  width: 100%;
  display: block;
  border: 0.25rem solid var(--clr-green-7);
  border-radius: 0.3rem;
}
.recipe-container > h3{
  flex: 1;

  font-size:1.2rem;

  width: 80%;
  margin: 0 auto;
  text-align: center;
  
  display: flex;
  align-items: center;
  justify-content: center;
}
.recipe-btns{
  display: flex;
  flex-direction: column;
  gap: 0.7rem;
  align-items: center;
}

.recipe-ingredient-btn, .recipe-instruction-btn, .clr-btn{
  height: 2rem;
  width: 80%;
  border-radius: 0.4rem;
  border: solid 0.1rem var(--clr-grey-9);
  border: solid 0.1rem black;
  font-size: 1rem;
  cursor: pointer;
}

.recipe-ingredient-btn:hover{
  background-color: var(--clr-grey-9);
}

.recipe-instruction-btn, .clr-btn{
  color: white;
  background-color: black;
}
/* ... */

